feat: backend para autenticação
