# api/routes/users.py
@@ -1,0 +1,41 @@
+from flask import g, jsonify, request
+from flask.views import MethodView
+from api.utils import create_api_blueprint
+from api.schemas.routes import LoginRequestSchema
+from api.services.supabase import supabase_client
+from api.auth import private_route
+from pprint import pprint
+
+NAMESPACE = "Usuarios"
+api = create_api_blueprint(NAMESPACE)
+
+@api.route("/me")
+class UserController(MethodView):
+    @api.doc(operationId="getCurrentUserData")
+    @private_route()
+    def get(self):
+        print('\n\n\n\n\n callback', g.current_user)
+        return jsonify({})
+
+
+@api.route("/sign-up")
+class SignUpController(MethodView):
+    @api.arguments(LoginRequestSchema)
+    @api.doc(operationId="createAccount")
+    def post(self, body: LoginRequestSchema):
+        print('\n\n\n\n\n\n\n\nbody:\n', body)
+        response = supabase_client.auth.sign_up(body)
+        print(f'{response=}')
+        return {}
+
+
+@api.route("/login")
+class LoginController(MethodView):
+    @api.arguments(LoginRequestSchema)
+    @api.doc(operationId="login")
+    def post(self, body: LoginRequestSchema):
+        print(f"{body=}")
+        response = supabase_client.auth.sign_in_with_password(body)
+        pprint(response.session)
+
+        return { 'access_token': response.session.access_token, 'refresh_token': response.session.refresh_token }
